[FIXED #91481312] Height of array component is too small for empty field.
For empty field, the height of array component was too small.
Now the min-heght of component is appropriate to allow easy click
on the component.

--- a/src/client/scss/x/_inlineedit.scss
+++ b/src/client/scss/x/_inlineedit.scss
@@ -2,7 +2,7 @@
 	display: table;
 	width: 100%;
 	position: relative;
-	// min-height: $inlineedit-min-height;
+	min-height: $inlineedit-min-height;
 
 	.x-inlineedit-content {
 		display: table-cell;
